# grasp_ils_vnd_pr

./: .JuliaFormatter.toml  .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  codecov.yml  compile_flags.txt  coverage-python.xml  coverage.info  coverage_raw.info  coverage_test_api.json  julia-lcov.info  julia_smoke.jl  mkdocs.yml  noxfile.py  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/prompts/: production-evaluation.prompt.md
.github/scripts/: install-package.sh  smoke-install.sh
.github/workflows/: audit.yml  backfill-provenance.yml  ci-cpp.yml  ci-julia.yml  ci-python.yml  ci-r.yml  ci-rust.yml  ci-sonarqube.yml  ci.yml  codeql.yml  compathelper-julia.yml  dco.yml  dependabot-automerge.yml  docs-julia.yml  docs.yml  dry-run-crates.yml  fuzz.yml  release-please.yml  release.yml  scorecard.yml  security.yml  tagbot-julia.yml  testpypi.yml  update-version-badges.yml
.julia-env/: Activate.ps1
Notebooks/: benchmark_givp_python.ipynb  benchmark_givp_rust.ipynb  benchmark_literature_comparison.ipynb
Notebooks/Cpp/: benchmark_givp_cpp.ipynb  benchmark_literature_comparison_cpp.ipynb
Notebooks/Julia/: benchmark_givp_julia.ipynb  benchmark_literature_comparison_julia.ipynb  results_notebook_julia.json
Notebooks/Python/: benchmark_givp_python.ipynb  benchmark_literature_comparison.ipynb  benchmark_literature_comparison_results.json  benchmark_readme_tables.md
Notebooks/R/: benchmark_givp_r.ipynb  benchmark_literature_comparison_r.ipynb
Notebooks/Rust/: benchmark_givp_rust.ipynb  benchmark_literature_comparison_rust.ipynb
benchmarks/: test_benchmarks.py
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  vcpkg.json
cpp/benchmarks/: CMakeLists.txt  benchmarks.cpp  run_literature_comparison.cpp
cpp/fuzz/: CMakeLists.txt  fuzz_givp.cpp
cpp/include/givp/: config.hpp  exceptions.hpp  givp.hpp  result.hpp
cpp/include/givp/detail/: cache.hpp  convergence.hpp  elite.hpp  grasp.hpp  helpers.hpp  ils.hpp  impl_core.hpp  pr.hpp  vnd.hpp
cpp/sonar/: analysis_tu.cpp
cpp/tests/: CMakeLists.txt  test_advanced.cpp  test_basic.cpp  test_config.cpp  test_convergence.cpp
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/algorithm/: index.html
dev/api/: index.html
dev/julia/: index.html
dev/quickstart/: index.html
docker/local-ci/: cpp.Dockerfile  docker-compose.yml  julia.Dockerfile  python.Dockerfile  r.Dockerfile  rust.Dockerfile
docs/: _headers  algorithm.md  cli.md  comparison.md  cpp.md  examples.md  index.md  julia.md  profiling.md  python.md  quickstart.md  r.md  roadmap.md  rust.md  security-requirements.md
docs/api/: config.md  exceptions.md  grasp_ils_vnd_pr.md  optimizer.md  result.md
docs/examples/: benchmarks.md
fuzz/: fuzz_givp.py
julia/: LICENSE  Manifest.toml  Project.toml  README.md  cli.jl
julia/benchmarks/: Project.toml  README.md  benchmarks.jl  generate_report.jl  reference_results_30seeds.json  reference_results_30seeds_report.md  reference_results_30seeds_report.tex  run_literature_comparison.jl
julia/docs/: Project.toml  make.jl
julia/docs/src/: algorithm.md  api.md  index.md  julia.md  quickstart.md
julia/fuzz/: fuzz_givp.jl
julia/src/: GIVP.jl  GIVPOptimizer.jl  api.jl  cache.jl  config.jl  convergence.jl  elite.jl  exceptions.jl  experiment.jl  grasp.jl  helpers.jl  ils.jl  impl.jl  pr.jl  result.jl  vnd.jl
julia/test/: Project.toml  runtests.jl  test_api.jl  test_cache.jl  test_config.jl  test_convergence.jl  test_elite.jl  test_exceptions.jl  test_experiment.jl  test_grasp.jl  test_helpers.jl  test_ils.jl  test_impl.jl  test_pr.jl  test_properties.jl  test_quality_gate.jl  test_result.jl  test_static_analysis.jl  test_vnd.jl
previews/PR101/: .documenter-siteinfo.json  index.html
previews/PR101/algorithm/: index.html
previews/PR101/api/: index.html
previews/PR101/julia/: index.html
previews/PR101/quickstart/: index.html
previews/PR96/: .documenter-siteinfo.json  index.html
previews/PR96/algorithm/: index.html
previews/PR96/api/: index.html
previews/PR96/julia/: index.html
previews/PR96/quickstart/: index.html
python/: noxfile.py
python/benchmarks/: README.md  generate_report.py  run_literature_comparison.py  test_benchmarks.py  tune_hyperparams.py
python/fuzz/: fuzz_givp.py
python/requirements/: audit-extra.in  benchmarks.txt  ci-py310.txt  ci.txt  mutation.txt  release-tools.in  release-tools.txt  security.txt
python/tests/: __init__.py  conftest.py  test_algorithm_quality.py  test_api.py  test_benchmark_scripts.py  test_benchmarks.py  test_cli.py  test_config.py  test_core.py  test_experiment.py  test_legacy_compat.py  test_properties.py  test_result_invariants.py
r/: .lintr  DESCRIPTION  LICENSE  NAMESPACE
r/R/: api.R  benchmarks.R  cache.R  config.R  convergence.R  elite.R  exceptions.R  experiment.R  grasp.R  helpers.R  ils.R  impl.R  pr.R  result.R  vnd.R
r/tests/: testthat.R
requirements/: audit.txt  ci.txt  docs.txt  fuzz.txt  py310-constraints.txt  py310-extra.in  release-tools.in  release-tools.txt
rust/: Cargo.toml  lcov.info
rust/benches/: benchmarks.rs
rust/examples/: run_literature_comparison.rs  seed_sweep.rs
rust/fuzz/: fuzz_givp.rs
rust/src/: cache.rs  config.rs  convergence.rs  elite.rs  error.rs  experiment.rs  grasp.rs  helpers.rs  ils.rs  impl_core.rs  lib.rs  pr.rs  result.rs  vnd.rs
rust/tests/: test_givp.rs
scripts/: build-docs.sh
scripts/local-ci/: cpp.sh  julia.sh  python.sh  r.sh  run.ps1  run.sh  rust.sh  sonarqube.sh
src/givp/: __init__.py  _api.py  _config.py  _core.py  _exceptions.py  _result.py  api.py  config.py  exceptions.py  result.py
tests/: conftest.py  test_api.py  test_benchmarks.py  test_config.py  test_core.py  test_properties.py
(+41 files in other folders)
