[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "givp"
version = "0.1.0"
description = "GRASP-ILS-VND with Path Relinking — direction-agnostic metaheuristic optimizer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "TBD" }]
keywords = [
    "optimization",
    "metaheuristic",
    "grasp",
    "ils",
    "vnd",
    "path-relinking",
    "global-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/TBD/grasp_ils_vnd_pr"
Repository = "https://github.com/TBD/grasp_ils_vnd_pr"
Issues = "https://github.com/TBD/grasp_ils_vnd_pr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/givp"]

[tool.hatch.build.targets.sdist]
include = ["src/givp", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
