[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "givp"
version = "0.5.1"
description = "GRASP-ILS-VND with Path Relinking — direction-agnostic metaheuristic optimizer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.16"
authors = [{ name = "Arnaldo Mendes Pires Junior" }]
keywords = [
    "optimization",
    "metaheuristic",
    "grasp",
    "ils",
    "vnd",
    "path-relinking",
    "global-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.24,<3"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "black>=24",
    "mypy>=1.11",
    "hypothesis>=6.100",
    "pytest-benchmark>=4.0",
    "tqdm>=4.66",
]
fuzz = ["atheris>=2.3.0; sys_platform == 'linux'"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]

[project.scripts]
givp = "givp.cli:main"

[project.urls]
Homepage = "https://github.com/Arnime/grasp_ils_vnd_pr"
Repository = "https://github.com/Arnime/grasp_ils_vnd_pr"
Issues = "https://github.com/Arnime/grasp_ils_vnd_pr/issues"

[tool.hatch.build.targets.wheel]
packages = ["python/src/givp"]

[tool.hatch.build.targets.wheel.force-include]
"python/src/givp/py.typed" = "givp/py.typed"

[tool.hatch.build.targets.sdist]
include = ["python/src/givp", "python/tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = "-q --cov=givp --cov-report=term-missing --cov-fail-under=95 --strict-markers"
markers = ["slow: tests that are not run by default; use -m slow to enable"]

[tool.coverage.run]
branch = true
source = ["givp"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "pragma: no cover",
]

[tool.mypy]
python_version = "3.10"
files = ["python/src/givp"]
# Strict-ish settings: every check that previously needed an opt-out has
# been resolved. Future regressions show up in CI immediately.
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
disable_error_code = []

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "RUF", "PERF", "PT", "RET"]
ignore = [
    "E501",    # line length handled by formatter
    "S101",    # asserts are fine in tests
    "S311",    # numpy/random not crypto
    "PT011",   # pytest.raises(Exception) is fine in our negative tests
    "PERF401", # list.extend micro-opt; revisit during impl split
    "RUF046",  # int() over already-int; revisit during impl split
    "RUF002",  # ambiguous unicode in PT-BR docstrings
    "RET504",  # unnecessary assignment before return; readability win
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PT"]
"benchmarks/**/*.py" = ["S", "PT"]

[tool.pylint.main]
# Ruff is the canonical linter; Pylint runs only inside IDEs.
# Keep it quiet for test files and idiomatic pytest patterns.
# ``ignore-paths`` accepts regexes matched against the *full* path the IDE
# passes to pylint, so we accept anything containing ``/tests/`` or ``\tests\``.
ignore-paths = [".*[\\\\/]tests[\\\\/].*"]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 2000

# [tool.pylint."messages control"]
# disable = [
#     "missing-module-docstring",
#     "missing-class-docstring",
#     "missing-function-docstring",
#     "import-outside-toplevel",
#     "unused-argument",
#     "unused-variable",
#     "redefined-outer-name",
#     "protected-access",
#     "line-too-long",
#     "too-many-lines",
#     "too-few-public-methods",
#     "too-many-arguments",
#     "too-many-locals",
#     "too-many-positional-arguments",
#     "duplicate-code",
# ]

[tool.poetry.group.dev.dependencies]
nox = "^2026.4.10"
