[package]
name = "givp"
version = "0.5.2"
edition = "2021"
authors = ["Arnaldo Mendes Pires Junior <arnaldo_200@live.com>"]
description = "GRASP-ILS-VND with Path Relinking metaheuristic for continuous black-box optimization"
license = "MIT"
repository = "https://github.com/Arnime/grasp_ils_vnd_pr"
readme = "../README.md"
keywords = ["optimization", "metaheuristic", "grasp", "vnd", "path-relinking"]
categories = ["algorithms", "science", "mathematics"]
rust-version = "1.71"

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.6", features = ["html_reports"] }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[[bench]]
name = "benchmarks"
harness = false
